--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Whadda ya get when you stick cats to Carlo? Carlocatenation!">
 
-<title>carlocatanate</title>
+<title>carlocatenate</title>
 
 <link rel="stylesheet" href="css/style.css" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="jquery/jquery-2.1.3.min.js"></script>
-<!-- <script type="text/paperscript" src="javascript/paperscript.js" canvas="canvas"></script> -->
 
 <!--#################### TEACHES OLDER BROWSERS HTML5 ######################## -->
 <!--[if lt IE 9]>
@@ -23,23 +22,6 @@
 <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
 <![endif]-->
 
-<!--####################### IMAGE RESIZER SCRIPT ############################# -->
-<!-- The code doesn't work in IE6 or less, so I suggest the following
-conditionally-commented code in your <head> be used to implement the
-JavaScript on your RWD website -->
-<!--[if ! lte IE 6]><!-->
-<script type="text/javascript" src="javascript/imgsizer.js"></script>
-<script type="text/javascript">
-addLoadEvent(function() {
-if (document.getElementById && document.getElementsByTagName) {
-var aImgs =
-document.getElementById("content").getElementsByTagName("img");
-imgSizer.collate(aImgs);
-}
-});
-</script>
-<!--<![endif]-->
-
 <!-- The following script allows all browsers to support media queries in CSS.-->
 <!--[if lt IE 9]>
 <script src="http://css3-mediaqueriesjs.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -48,7 +30,7 @@ imgSizer.collate(aImgs);
 
 <body>
 
-	<h1>carlo <span class="green">+</span> <span class="strong">cat</span> <span class="orange">+</span> a <span class="purple">+</span> nate <span class="turquoise">+</span> !1!</h1>
+	<h1>carlo <span class="green">+</span> <span class="strong">cat</span> <span class="orange">+</span> e <span class="purple">+</span> nate <span class="turquoise">+</span> !1!</h1>
 
 	<input type="button" id="btn" class="strong" value="+">
 
